cmake_minimum_required(VERSION 3.6)
project("DiplomaProject" VERSION 0.1.001)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS ON)

set(CMAKE_INSTALL_PREFIX ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_BUILD_TYPE})

set (PROJECT_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/include)
set (PROJECT_TEST_DIR ${CMAKE_SOURCE_DIR}/test)

add_subdirectory(test)
add_subdirectory(src ${CMAKE_INSTALL_PREFIX})


file(COPY ${CMAKE_PREFIX_PATH}/bin/libstdc++-6.dll
    DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_BUILD_TYPE})
file(COPY ${CMAKE_PREFIX_PATH}/bin/libgcc_s_seh-1.dll
    DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_BUILD_TYPE})
file(COPY ${CMAKE_PREFIX_PATH}/bin/libwinpthread-1.dll
    DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_BUILD_TYPE})
file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/config.json
    DESTINATION  ${CMAKE_CURRENT_SOURCE_DIR}/${CMAKE_BUILD_TYPE})
